# BookShelf

./: .gitignore  README.md
.github/workflows/: build.yml  jekyll-gh-pages.yml  test  test.yml
COS3711-03-01/: CMakeLists.txt  COS3711-03-01.drawio
COS3711-03-01/docs/: annotated.html  author_8cpp.html  author_8h_source.html  book_8h_source.html  bookproxymodel_8h_source.html  booktablemodel_8h_source.html  bookwriter_8cpp.html  bookwriter_8h.html  class_book_input.html  class_test_author.html  class_test_book.html  class_test_book_proxy_model.html  class_test_book_table_model-members.html  class_test_book_table_model.html  class_test_book_writer-members.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  filewriter_8cpp.html  filewriter_8h_source.html  functions.html  menudata.js  testauthor_8h_source.html  testbookfactory_8cpp.html  testbookfactory_8h.html  testbookfactory_8h_source.html  testbookproxymodel_8h_source.html  testfilewriter_8cpp.html  testfilewriter_8h_source.html
COS3711-03-01/docs/html/: author_8h.html  book_8cpp.html  book_8h.html  bookfactory_8cpp.html  bookfactory_8h.html  bookfactory_8h_source.html  bookinput_8h.html  bookinput_8h_source.html  bookproxymodel_8h.html  booktablemodel_8cpp.html  booktablemodel_8h.html  bookwriter_8h_source.html  class_author-members.html  class_author.html  class_book-members.html  class_book.html  class_book_input-members.html  class_book_proxy_model-members.html  class_book_table_model-members.html  class_book_table_model.html  class_book_writer-members.html  class_book_writer.html  class_file_writer.html  class_main_window.html  class_test_book-members.html  class_test_book_factory-members.html  class_test_book_factory.html  class_test_book_proxy_model-members.html  class_test_file_writer-members.html  class_test_file_writer.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  doxygen_crawl.html  files.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  mainwindow_8cpp.html  mainwindow_8h.html  (+10 more)
COS3711-03-01/docs/html/search/: all_0.js  all_5.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_2.js  functions_4.js  functions_6.js  functions_8.js  searchdata.js
COS3711-03-01/docs/search/: all_1.js  classes_4.js  functions_3.js  functions_7.js
COS3711-03-01/src/: CMakeLists.txt  author.cpp  author.h  book.cpp  book.h  bookfactory.cpp  bookfactory.h  bookinput.cpp  bookinput.h  bookproxymodel.cpp  bookproxymodel.h  booktablemodel.cpp  booktablemodel.h  bookwriter.cpp  bookwriter.h  filewriter.cpp  filewriter.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
COS3711-03-01/tests/: CMakeLists.txt  main.cpp  testauthor.h  testbook.cpp  testbook.h  testbookfactory.cpp  testbookfactory.h  testbookproxymodel.cpp  testbookproxymodel.h  testbooktablemodel.cpp  testbooktablemodel.h  testbookwriter.cpp  testbookwriter.h  testfilewriter.cpp  testfilewriter.h  tst_author.cpp  tst_author.h
COS3711-03-02/: CMakeLists.txt
COS3711-03-02/docs/: Doxyfile  bookinput_8cpp.html  bookproxymodel_8cpp.html  class_book_factory-members.html  class_book_factory.html  class_book_proxy_model.html  class_file_writer-members.html  class_main_window-members.html  class_test_author-members.html  class_test_book_writer.html  filewriter_8h.html  index.html  src_2main_8cpp.html  testauthor_8h.html  testbook_8h.html  testbook_8h_source.html  testbooktablemodel_8h.html  testbookwriter_8h.html  testbookwriter_8h_source.html
COS3711-03-02/docs/search/: all_4.js  all_7.js  all_b.js  functions_1.js  functions_a.js
COS3711-03-02/src/: CMakeLists.txt  author.cpp  author.h  book.h  bookproxymodel.h  booktablemodel.cpp  booktablemodel.h  bookwriter.cpp  bookwriter.h  filewriter.cpp  filewriter.h  mainwindow.h
COS3711-03-02/tests/: main.cpp  testauthor.cpp  testbook.cpp  testbookfactory.cpp  testbookfactory.h  testbooktablemodel.cpp  testbooktablemodel.h  testbookwriter.cpp  testbookwriter.h
